- Fixed some more redraw bugs
- Last imput in the search dia is remembered
- Implemented searching backwards (also with formats)

Reggie, 7.1.1999:
-----------------
- Added filedialog preview widgets for pictures and cliparts
- Started with replacing text (with the dialog - somehow I have to decrease the size of this dialog)

Reggie, 8.1.1999:
-----------------
- Decreased size of search/replace dialog a bit
- It's possible to use regular expressions and wildcards for searching now
- Initialization of vertical ruler works correctly now too
- More work on internal stuff for replacing text

Reggie, 9.1.1999:
-----------------
- Some more work on replacing text

Reggie, 10.1.1999:
------------------
- Fixed some memory leak producing code
- Find&Replacing works (with formats)

Reggie, 11.1.1999:
------------------
- Implemented 'replace all'

Reggie, 12.1.1999:
------------------
- Started with tables:
  - Implemented internals for tables (a table consists of (rows * cols) framesets, each frameset has one frame)
  - Inserting tables works (I'll add a widget for choosing the number of rows and cols tomorrow)
  - Writing text in the tables and formatting works
  - Moving tables works 
  - Resizing rows and cols works
  - Selecting cells works

Reggie, 13.1.1999:
------------------
- Tons of fixes and improvements
- Improvements for tables and headers/footers
- If the text of a frameset doesn't fit into the frames anymore, and no new frames should be appended,
  the last frame gets, if possible, automatically resized now (this is default for table cells and headers/footers)
- Cleanup of framedia

Reggie, 14.1.1999:
------------------
- Fixes
- When inserting a new parag (after pressing return) and current paragLayout->name() == following paragLayout->name()
  a copy of the current paragLayout is assigned to the new parag. 
- Tables can flow over multiple pages now
- Saving and Loading tabes works now
- Destructor doesn'c crash anymore :-)) (at least on my system)